[package]
name = "runehook"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "runehook"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainhook-sdk = { version = "0.12.10", features = ["zeromq"] }
# chainhook-sdk = { version = "=0.12.10", path = "../chainhook/components/chainhook-sdk", features = ["zeromq"] }
bitcoin = { version = "0.30.1", features = ["rand"] }
lru = "0.12.3"
ordinals = "0.0.8"
bytes = "1.3"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = "1"
serde_derive = "1"
hex = "0.4.3"
rand = "0.8.5"
hiro-system-kit = "0.3.1"
toml = { version = "0.5.11", features = ["preserve_order"] }
ctrlc = { version = "3.2.2", optional = true }
reqwest = { version = "0.11", features = ["stream", "json"] }
crossbeam-channel = "0.5.8"
clap = { version = "4.3.2", features = ["derive"] }
clap_generate = { version = "3.0.3" }
tokio-postgres = "0.7.10"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
num-traits = "0.2.14"
maplit = "1.0.2"

[dev-dependencies]
test-case = "3.1.0"
mutants = "0.0.3"

[features]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]
